<resources>
    <string name="app_name">CarShop</string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="account">Cuenta</string>
    <string name="add">Agregar</string>
    <string name="addCategoria">Agregar categoria</string>
    <string name="nomCategoria">Nombre de categoria</string>
    <string name="cancel">Cancelar</string>
    <string name="price">Precio</string>
    <string name="model">Modelo</string>
    <string name="Seating">Asientos</string>
    <string name="state">Estado</string>
    <string name="date">Fecha publicación</string>
    <string name="categoria">Categoria</string>
    <string name="bateria">Capacidad de bateria</string>
    <string name="capacidad">Capacidad de espacio</string>
    <string name="carga">Carga útil</string>
    <string name="addCar">Agregar vehiculo</string>
    <string name="update">Actualizar</string>
    <string name="marca">Marca</string>
    <string name="updateCar">Actualizar vehiculo</string>
    <string name="listVehicule">Lista de vehiculos</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad</string>
    <string name="loading">Cargando</string>
    <string name="noDisponible">Opción no disponible</string>
    <string name="failVehicule">No hay vehiculos en esa categoria</string>
    <string name="failDataVehicule">Error al cargar los datos del vehiculo</string>
    <string name="verificarConexion">¡Verifique su conexión a internet!</string>
    <string name="completarCampos">Complete los campos</string>
    <string name="registerOk">Se ha registrado correctamente</string>
    <string name="modifyFail">No puedes editar la categoría Eléctrico</string>
    <string name="updateOk">Se actualizó correctamente el vehículo</string>
    <string name="updateFail">¡Error al actualizar!</string>
    <string name="sureUpdate">¿Seguro deseas actualizar el vehiculo?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="error">¡A ocurrido un error!</string>
</resources>
