<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/borde_dialogo"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/addCategoria"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divisor"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="5dp"
            android:background="#f7f0ef"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomCategoria"
            android:theme="@style/edit_text_black">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNomCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnAddCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add"
                android:background="@color/fondo_gradiente"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
