<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    cardview:cardCornerRadius="4dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@color/fondo"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/model"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtModelo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="Chevrolet Camaro SS"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="130'000.000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/Seating"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtAsientos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="Nuevo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtFecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="22-10-2020"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:text="@string/bateria"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtCateVehiculo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="37,9 kWh"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txtOtros"
                android:text="@string/bateria"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"/>
            <TextView
                android:id="@+id/txtOtros2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:text="37,9 kWh"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>